tests/ui/cross-crate/private-by-default.stderr
error[E0603]: static `j` is private
  --> $DIR/private-by-default.rs:24:29
   |
LL |     static_priv_by_default::j;
   |                             ^ private static
   |
note: the static `j` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:48:1
   |
LL | static j: isize = 0;
   | ^^^^^^^^^^^^^^^

error[E0603]: function `k` is private
  --> $DIR/private-by-default.rs:26:29
   |
LL |     static_priv_by_default::k;
   |                             ^ private function
   |
note: the function `k` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:49:1
   |
LL | fn k() {}
   | ^^^^^^

error[E0603]: unit struct `l` is private
  --> $DIR/private-by-default.rs:28:29
   |
LL |     static_priv_by_default::l;
   |                             ^ private unit struct
   |
note: the unit struct `l` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:50:1
   |
LL | struct l;
   | ^^^^^^^^

error[E0603]: enum `m` is private
  --> $DIR/private-by-default.rs:30:35
   |
LL |     foo::<static_priv_by_default::m>();
   |                                   ^ private enum
   |
note: the enum `m` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:51:1
   |
LL | enum m {}
   | ^^^^^^

error[E0603]: type alias `n` is private
  --> $DIR/private-by-default.rs:32:35
   |
LL |     foo::<static_priv_by_default::n>();
   |                                   ^ private type alias
   |
note: the type alias `n` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:52:1
   |
LL | type n = isize;
   | ^^^^^^

error[E0603]: module `foo` is private
  --> $DIR/private-by-default.rs:36:29
   |
LL |     static_priv_by_default::foo::a;
   |                             ^^^  - static `a` is not publicly re-exported
   |                             |
   |                             private module
   |
note: the module `foo` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:13:1
   |
LL | mod foo {
   | ^^^^^^^

error[E0603]: module `foo` is private
  --> $DIR/private-by-default.rs:38:29
   |
LL |     static_priv_by_default::foo::b;
   |                             ^^^  - function `b` is not publicly re-exported
   |                             |
   |                             private module
   |
note: the module `foo` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:13:1
   |
LL | mod foo {
   | ^^^^^^^

error[E0603]: module `foo` is private
  --> $DIR/private-by-default.rs:40:29
   |
LL |     static_priv_by_default::foo::c;
   |                             ^^^  - unit struct `c` is not publicly re-exported
   |                             |
   |                             private module
   |
note: the module `foo` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:13:1
   |
LL | mod foo {
   | ^^^^^^^

error[E0603]: module `foo` is private
  --> $DIR/private-by-default.rs:42:35
   |
LL |     foo::<static_priv_by_default::foo::d>();
   |                                   ^^^  - enum `d` is not publicly re-exported
   |                                   |
   |                                   private module
   |
note: the module `foo` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:13:1
   |
LL | mod foo {
   | ^^^^^^^

error[E0603]: module `foo` is private
  --> $DIR/private-by-default.rs:44:35
   |
LL |     foo::<static_priv_by_default::foo::e>();
   |                                   ^^^  - type alias `e` is not publicly re-exported
   |                                   |
   |                                   private module
   |
note: the module `foo` is defined here
  --> $DIR/auxiliary/static_priv_by_default.rs:13:1
   |
LL | mod foo {
   | ^^^^^^^

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0603`.
